eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-app-api-deployment
  labels:
    app: bank-app-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bank-app-api
  template:
    metadata:
      labels:
        app: bank-app-api
    spec:
      containers:
      - name: bank-app-api
        image: 550283008086.dkr.ecr.us-east-2.amazonaws.com/bankapp:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
